--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "antd": "^4.24.2",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +24,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
